--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "x-ray",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "hono": "^4.11.4",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
