--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-auth": "^1.4.13",
     "hono": "^4.11.4",
     "next": "16.1.2",
     "react": "19.2.3",
